2012-05-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvitomp.test: Cope with spaces in paths returned by kpsewhich.

2012-05-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mplib.am (mpost_LDADD): Drop explicit '-lm'.

2012-05-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mpost.w: Use WEB2CVERSION.

2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/libmplib.am (EXTRA_DIST): Drop lmplib.c, used by luaTeX.

2011-06-06 Taco Hoekwater  <taco@luatex.org>

	* mpost.w (mpost_run_editor): Do not attempt to use EDITOR.

2011-06-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mplib.am (bin_links): Remove no longer existing 'metafun'.

2011-05-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mplib.am (bin_links): Move mpost:metafun and mpost:mfplain
	from ../../texlive/linked_scripts/Makefile.am to here.
	[MinGW]: Build call_mpost.exe wrapper binary and install as
	dvitomp.exe, metafun.exe, amd mfplain.exe.

2011-05-30 Taco Hoekwater  <taco@luatex.org>

	* all files: clarify that base MetaPost is public domain,
	but uses LGPL'd libraries.

2011-05-13  Taco Hoekwater  <taco@luatex.org>

	* mpost.w (main): change setting of kpse program name
	(on a hint by PEB).

2011-05-09  Taco Hoekwater  <taco@luatex.org>

	* mpxout.w (mpx_in_TFM): close tfm files.

2011-04-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mp.w (mp_do_snprintf): Removed, instead declare and define
	static internal version of mp_snprintf().
	Compare change from 2009-12-05:
	FIXME: Should unconditionally assume snprintf() exists.

2011-04-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/libmplib.am: Only one rule for tfmin.w => tfmin.c.

2011-04-05  Taco Hoekwater  <taco@luatex.org>

	* mp.w, mpost.w: import metapost 1.504

2011-04-05  Taco Hoekwater  <taco@luatex.org>

	* Import of MetaPost 1.503, updating the .w files as well
	as lmplib.c and avl.c, and adding mpmath.w and removing memio.w
	* am/libmplib.am: add support for mpmath.w, remove memio.w